--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -3,17 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "cors": "^2.8.5",
-    "https": "^1.0.0",
     "react": "^18.2.0",
-    "react-cookie": "^7.0.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./reactcert/cert.pem SSL_KEY_FILE=./reactcert/key.pem react-scripts start",
@@ -39,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@cyclonedx/cyclonedx-npm": "^1.16.1"
+  "resolutions": {
+    "nth-check": "2.0.1"
   }
 }
