--- a/expressjs-backend/package.json
+++ b/expressjs-backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.1.0",
     "validator": "^13.11.0"
   }
